--- a/app/components/Chatbot/Chatbot.module.scss
+++ b/app/components/Chatbot/Chatbot.module.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   right: 0;
   font-family: var(--fontFamily--archivo);
-  overflow: hidden;
+  word-break: break-word;
 
   @media screen and (max-width: 1530px) {
     position: static;
@@ -13,7 +13,7 @@
   }
 
   &-container {
-    max-width: 40rem;
+    max-width: 37rem;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -22,38 +22,65 @@
     border-radius: 0.8rem;
     box-shadow: 0 0 10rem var(--chatbot--container--boxShadow--color);
     background-color: var(--chatbot--container--bg);
+    box-shadow: 2px 3px 20px 6px var(--chatbot--container--boxShadow);
   }
 
-  &-title {
-    color: var(--chatbot--title--color);
+  &-entilted {
+    display: flex;
+    align-items: center;
+    color: var(--chatbot-entilted--color);
+
+    &__title {
+      // color: var(--chatbot--title--color);
+      // z-index: 999;
+    }
+
+    &__icon {
+      font-size: var(--chatbot-entilted__icon--fontSize);
+      padding-right: 1rem;
+    }
   }
 
   &-messages {
     margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  .message {
-    display: flex;
-    flex-wrap: wrap;
+    max-height: 300px;
+    overflow-y: auto;
+    scrollbar-color: var.$four-color white; // firefox
+    scrollbar-width: thin;
     padding: 1rem;
-    margin: 0.5rem 0;
-    border-radius: 0.5rem;
-    font-size: var(--chatbot--messageUserBot-fontSize);
-  }
 
-  .user {
-    background-color: var(--chatbot--userQuestion--bg);
-    color: var(--chatbot--userQuestion--color);
-    align-self: flex-end;
-  }
+    &::-webkit-scrollbar {
+      width: 0.4rem;
+    }
 
-  .bot {
-    background-color: var(--chatbot--botResponse--bg);
-    color: var(--chatbot--botResponse--color);
-    align-self: flex-start;
+    &::-webkit-scrollbar-thumb {
+      background-color: var.$four-color;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: white;
+    }
+
+    .message {
+      padding: 1rem;
+      margin: 0.5rem 0;
+      border-radius: 0.5rem;
+      font-size: var(--chatbot--messageUserBot-fontSize);
+    }
+
+    .user {
+      background-color: var(--chatbot--userQuestion--bg);
+      color: var(--chatbot--userQuestion--color);
+      align-self: flex-end;
+    }
+
+    .bot {
+      background-color: var(--chatbot--botResponse--bg);
+      color: var(--chatbot--botResponse--color);
+      align-self: flex-start;
+    }
   }
 
   .chatbot-form {
@@ -64,7 +91,7 @@
   .chatbot-form input {
     flex: 1;
     padding: 0.8rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     border: 0.1rem solid var(--chatbot--inputQuestion--borderColor);
     border-radius: 0.5rem;
   }
