--- a/app/components/Contact/Contact.module.scss
+++ b/app/components/Contact/Contact.module.scss
@@ -135,6 +135,7 @@
         &::placeholder {
           font-size: var(--contact--placeHolder--fontSize);
           color: var(--contact--placeHolder--color);
+          opacity: 1;
         }
       }
 
@@ -151,6 +152,7 @@
         &::placeholder {
           font-size: var(--contact--placeHolder--fontSize);
           color: var(--contact--placeHolder--color);
+          opacity: 1;
         }
       }
 
